# edgevision

./: .gitignore  LICENSE  README.md  README_PHASE1.md  README_PHASE2.md  README_PHASE3.md  SPEC.md  THIRD_PARTY_NOTICES.md  pyproject.toml
config/: cameras.yaml  zones.yaml
evaluation/: baseline_metrics.json  baseline_metrics.md  vlm_latency_spike.json
evaluation/datasets/exdark_people_test/: manifest.json
evaluation/fp_examples/: fp_summary.json
scripts/: generate_smoke_test_video.py  prepare_lowlight_testset.py  prepare_training_data.py  run_baseline_eval.py  run_finetune.py  run_finetuned_eval.py  run_local.py  spike_vlm_latency.py
sentinel/: pipeline.py
sentinel/detection/: detector.py  tracker.py
sentinel/evaluation/: __init__.py  dataset.py  exdark.py  metrics.py
sentinel/events/: clip_writer.py  event_builder.py
sentinel/ingestion/: stream_reader.py
sentinel/rules/: zone_engine.py
sentinel/training/: __init__.py  augmentations.py  intel_sources.py
tests/: test_evaluation_metrics.py  test_event_builder.py  test_finetuned_eval_markdown.py  test_pipeline_clips.py  test_pipeline_config.py  test_stream_reader.py  test_training_augmentations.py  test_training_data_policy.py  test_zone_engine.py
tests/fixtures/: zones.yaml
