[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgevision-sentinel"
version = "0.1.0"
description = "AI-native edge security analytics — VMS-agnostic anomaly & threat detection for cameras you already own."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Hamid Matiny", email = "hamidmatiny@gmail.com" },
]
keywords = ["security", "computer-vision", "edge-ai", "surveillance", "yolo", "anomaly-detection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "ultralytics>=8.3",           # YOLO detector
  "supervision>=0.22",          # ByteTrack wrapper + utilities
  "opencv-python-headless>=4.9",# Video I/O (headless = no GUI deps)
  "shapely>=2.0",               # Point-in-polygon
  "pyyaml>=6.0",                # Config file parsing
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
train = [
  "albumentations>=1.4",
]
gpu = [
  # Install TensorRT separately per your CUDA version.
  # See: https://docs.ultralytics.com/integrations/tensorrt/
]

[project.scripts]
sentinel-run = "scripts.run_local:main"

[project.urls]
Homepage = "https://github.com/hamidmatiny/edgevision"
Repository = "https://github.com/hamidmatiny/edgevision"
Issues = "https://github.com/hamidmatiny/edgevision/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
